[package]
name = "idocker"
version = "0.1.0"
authors = ["Aatif Syed <aatif.syed@metaswitch.com>"]
edition = "2018"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.7.1"
shiplift = { git = "https://github.com/softprops/shiplift", rev = "5af822c" }
slog = "2.7.0"
tokio = { version = "1.2.0", features = ["macros"] }
