[package]
name = "idocker"
version = "0.1.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/aatifsyed/idocker-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
colored = "2.0.0"
dialoguer = "0.7.1"
shiplift = { git = "https://github.com/softprops/shiplift", rev = "5af822c" }
slog = "2.7.0"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["macros"] }
